ADEP-9 prevent wrapping of end of month warning

--- a/source/css/scss/app/pages/auto-deposit.scss
+++ b/source/css/scss/app/pages/auto-deposit.scss
@@ -105,6 +105,10 @@
 						}
 					}
 				}
+
+				.after-28-note {
+					display: inline-block;
+				}
 			}
 
 			/* turn on pointer events for touch events */
